--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "ISC",
   "description": "a url shortener project",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.6",
     "shortid": "^2.2.16"
   }
 }
