--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "description": "a url shortener project",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.6",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.7"
   }
 }
